# dpm

./: .env.example  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  build.rs  datapackage.json  shell.nix
.github/workflows/: release.yml  test-dpm.yml
proto/: dpm_agent.proto
secrets/: .sops.yaml  dpm.enc.env
src/: api.rs  codegen.rs  command.rs  descriptor.rs  env.rs  github.rs  lib.rs  session.rs  util.rs
src/codegen/: csharp.rs  generator.rs  golang.rs  nodejs.rs  python.rs  typescript.rs
src/command/: build_package.rs  describe.rs  init.rs  login.rs  package.rs  patch.rs  publish.rs  snowflake.rs  source.rs  update.rs
src/descriptor/: data_package.json  data_package.json.base  data_package.rs  dataset.rs  table_schema.json  table_schema.rs
src/static/python/0.1.0/src/: dataset.py  fieldExpr.py  table.py
src/static/python/0.1.0/src/backends/: factory.py  interface.py  patch.py  snowflake.py
src/static/python/0.1.0/src/backends/dpm_agent/: dpmAgentClient.py
static/csharp/: Dpm.sln  README.md
static/csharp/Dpm/: AggregateFieldExpr.cs  ArrayField.cs  BooleanFieldExpr.cs  DatasetClient.cs  DateField.cs  DateTimeField.cs  DerivedField.cs  Dpm.csproj  DpmAgentClient.cs  DpmAgentClientFactory.cs  DpmAgentQueryFactory.cs  Env.cs  Field.cs  FieldExpr.cs  LiteralField.cs  Operator.cs  Scalar.cs  StringField.cs  Table.cs  TimeField.cs  UnaryBooleanFieldExpr.cs  Version.cs
static/csharp/DpmTest/: DpmTest.csproj  TestDateUtils.cs  TestQueryFormulation.cs  UnitTest1.cs
static/golang/: field.go  field_expr.go  field_expr_test.go  field_test.go  go.mod  main.go
static/golang/backends/: dpm_agent.pb.go  dpm_agent_client.go  dpm_agent_grpc.pb.go  factory.go  field.go  field_expr.go  field_expr_test.go  field_test.go  interface.go  table.go  version.go
static/golang/backends/dpm_agent/: dpm_agent.pb.go  dpm_agent_client.go  dpm_agent_grpc.pb.go
static/golang/internal/: dpm_agent_client.go
static/golang/internal/backends/: dpm_agent.pb.go
static/golang/models/: field.go  field_expr.go  field_expr_test.go  field_test.go  table.go
static/nodejs/: Makefile  package-lock.json  package.json
static/nodejs/src/: field.ts  field_expr.ts  table.ts  version.ts
static/nodejs/src/backends/: factory.ts  interface.ts  patch.ts  snowflake.ts
static/nodejs/src/backends/dpm_agent/: dpm_agent_client.ts  dpm_agent_grpc_pb.d.ts  dpm_agent_pb.d.ts  dpm_agent_pb.js
static/nodejs/test/: dpm_query_builder.test.ts  field.test.ts  field_expr.test.ts  patch.test.ts
static/python/: Makefile  pyproject.toml
static/python/0.1.0/src/: dataset.py  field.py  fieldExpr.py  field_expr.py  table.py
static/python/0.1.0/src/backends/: env.py  factory.py  interface.py  patch.py  snowflake.py
static/python/0.1.0/src/backends/dpm_agent/: dpmAgentClient.py  dpm_agent_client.py  dpm_agent_pb2.py  dpm_agent_pb2.pyi  dpm_agent_pb2_grpc.py
static/python/0.1.0/src/test/: snowflake_ds.py  uk_real_estate_records_py.py
static/python/src/: field.py  field_expr.py  table.py  version.py
static/python/src/backends/: env.py  factory.py  interface.py  patch.py  snowflake.py
static/python/src/backends/dpm_agent/: dpm_agent_client.py  dpm_agent_pb2.py  dpm_agent_pb2.pyi  dpm_agent_pb2_grpc.py
static/python/src/test/: dpm_query_builder_test.py  field_expr_test.py  field_test.py  patch_test.py  uk_real_estate_records_py.py
static/typescript/: package.json
static/typescript/0.1.0/src/: dataset.ts  field.ts  field_expr.ts  table.ts
static/typescript/0.1.0/src/backends/: factory.ts  patch.ts  snowflake.ts
static/typescript/0.1.0/src/backends/dpm_agent/: dpmAgentClient.ts  dpm_agent_client.ts  dpm_agent_grpc_pb.d.ts  dpm_agent_grpc_pb.js  dpm_agent_pb.d.ts  dpm_agent_pb.js
static/typescript/src/: field.ts  field_expr.ts  table.ts
static/typescript/src/backends/: env.ts  factory.ts  interface.ts
static/typescript/src/backends/dpm_agent/: dpm_agent_client.ts  dpm_agent_grpc_pb.js  dpm_agent_pb.d.ts  dpm_agent_pb.js
static/typescript/test/: field.test.ts
test_directory/python/: pyproject.toml
test_directory/python/hubla_prod_bq/hubla_prod_bq/: __init__.py
test_directory/python/hubla_prod_bq/tables/: ext_products_members_churn_monthly.py  test.py
tests/: integration_test.rs
tests/integration_test/: nodejs.rs  python.rs  target.rs  target_tester.rs
tests/nodejs/: package-lock.json  package.json  tsconfig.json
tests/nodejs/test/: patch.test.ts  snowflake.test.ts
tests/python/: patch_test.py  query.py  snowflake_test.py
tests/resources/: datapackage.json  patch_datapackage.json  test_datapackage.json
