[package]
name = "dpm"
version = "0.1.0"
authors = ["Patch Engineering <eng@patch.tech>"]
edition = "2021"
rust-version = "1.69"
description = "Create data packages: libraries tailored to access versioned datasets"
homepage = "https://www.dpm.sh/"
repository = "https://github.com/patch-tech/dpm"
license = "MIT"
categories = ["command-line-utilities", "compilers"]
publish = false
keywords = ["data", "data-versioning", "schema", "schema-versioning", "data-warehouse", "cli", "query", "analytics", "dashboard", "dataset", "snowflake", "bigquery", "databricks", "duckdb", "postgres", "python", "typescript"]

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
convert_case = "0.6.0"
prost = "0.11.9"
regress = "0.6.0"
rust-embed = "6.6.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tinytemplate = "1.2.1"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
