[package]
name = "dpm"
version = "0.1.0"
authors = ["Patch Engineering <eng@patch.tech>"]
edition = "2021"
rust-version = "1.69"
description = "Create data packages: libraries tailored to access versioned datasets"
homepage = "https://www.dpm.sh/"
repository = "https://github.com/patch-tech/dpm"
license = "MIT"
categories = ["command-line-utilities", "compilers"]
publish = false
keywords = ["data", "data-versioning", "schema", "schema-versioning", "data-warehouse", "cli", "query", "analytics", "dashboard", "dataset", "snowflake", "bigquery", "databricks", "duckdb", "postgres", "python", "typescript", "nodejs"]
build = "build.rs"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.1"
convert_case = "0.6.0"
dialoguer = "0.10.4"
directories = "5.0.1"
prost = "0.11.9"
regress = "0.6.0"
reqwest = "0.11.18"
rust-embed = { version = "6.6.1", features = ["include-exclude"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tinytemplate = "1.2.1"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.7.4"
tonic = { version = "0.9.2", features = ["tls", "tls-roots"]}
url = "2.4.0"

[build-dependencies]
built = { version = "0.6.1", features = ["git2"] }
tonic-build = "0.9.2"
